--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
-title=TODO
-subtitle=TODO
-authors=TODO
+title=Mock Basic
+subtitle=In this guide you are going to learn how to mock in Grails
+authors=Nirav Assar
 copyright=Copies of this document may be made for your own use and for distribution to others, provided that you do not charge any fee for such copies and further provided that each copy contains this Copyright Notice, whether distributed in print or electronically. All guides are released with an ASLv2 license for the code, and Creative Commons license for the writing. 
-githubSlug=TODO
+githubSlug=grails-guides/grails-mock-basics
 githubBranch=master
-tags=TODO
-category=TODO
+tags=unit-test
+category=Grails Testing
