--- a/src/main/docs/guide/toc.yml
+++ b/src/main/docs/guide/toc.yml
@@ -4,5 +4,15 @@ gettingStarted:
   howto: How to complete the guide
 writingTheApp:
   title: Writing the Application
+  domainClasses: Domain Classes
+  controllers: Controllers
+  classroomService: Classroom Service
+  testFindStudents: Test Find Students By Mocking Domain
+  testCalcAvgGrade: Test Calculate Average Grade By Mocking Domain
+  testEmailWithMock: Test Email with Mock Collaborators
+  testEmailWithExpando: Test Email with Expando
+  testEmailWithMetaClassReplace: Test Email with MetaClass Replace
+summary:
+  title: Summary
 runningTheApp:
   title: Running the Application
