Change guide copy

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
-title=Grail Mock Basics
-subtitle=In this guide you are going to learn the basics of mocking in Grails. You will see how to mock Domain classes and Services.
+title=Grails Service Testing
+subtitle=In this guide we are going to explore Service testing in Grails. Unit test GORM, Integration Tests, Mocking collaborators...
 authors=Nirav Assar
-copyright=Copies of this document may be made for your own use and for distribution to others, provided that you do not charge any fee for such copies and further provided that each copy contains this Copyright Notice, whether distributed in print or electronically. All guides are released with an ASLv2 license for the code, and Creative Commons license for the writing. 
+copyright=Copies of this document may be made for your own use and for distribution to others, provided that you do not charge any fee for such copies and further provided that each copy contains this Copyright Notice, whether distributed in print or electronically. All guides are released with an ASLv2 license for the code, and Creative Commons license for the writing.
 githubSlug=grails-guides/grails-mock-basics
 githubBranch=master
 tags=unit-test, mock, spock
