--- a/complete/build.gradle
+++ b/complete/build.gradle
@@ -6,7 +6,7 @@ buildscript {
     dependencies {
         classpath "org.grails:grails-gradle-plugin:$grailsVersion"
         classpath "com.bertramlabs.plugins:asset-pipeline-gradle:2.14.1"
-        classpath "org.grails.plugins:hibernate5:${gormVersion-".RELEASE"}"
+        classpath "org.grails.plugins:hibernate5:${gormVersion-".RELEASE"}" // <1>
     }
 }
 
@@ -36,8 +36,9 @@ dependencies {
     compile "org.grails.plugins:cache"
     compile "org.grails.plugins:scaffolding"
     compile "org.grails.plugins:hibernate5"
-    compile "org.hibernate:hibernate-core:5.1.3.Final"
-    compile "org.hibernate:hibernate-ehcache:5.1.3.Final"
+    compile "org.hibernate:hibernate-core:5.1.3.Final"  // <1>
+    compile "org.hibernate:hibernate-ehcache:5.1.3.Final" // <1>
+    testCompile "org.grails:grails-datastore-gorm-test:$gormVersion"  // <2>
     console "org.grails:grails-console"
     profile "org.grails.profiles:web"
     runtime "com.bertramlabs.plugins:asset-pipeline-grails:2.14.1"
