--- a/complete/gradle.properties
+++ b/complete/gradle.properties
@@ -1,3 +1,4 @@
-grailsVersion=3.2.9
-gormVersion=6.0.10.RELEASE
-gradleWrapperVersion=3.4.1
+grailsVersion=3.3.0
+grailsWrapperVersion=1.0.0
+gormVersion=6.1.6.RELEASE
+gradleWrapperVersion=3.5
