--- a/gradle.properties
+++ b/gradle.properties
@@ -6,3 +6,4 @@ githubSlug=grails-guides/grails-mock-basics
 githubBranch=master
 tags=unit-test, mock, spock
 category=Grails Testing
+publicationDate=24 Apr 2017
