--- a/initial/build.gradle
+++ b/initial/build.gradle
@@ -66,7 +66,8 @@ dependencies {
     testCompile "org.grails:grails-gorm-testing-support"
     testCompile "org.mockito:mockito-core"
     testCompile "org.grails.plugins:geb"
-    testRuntime "net.sourceforge.htmlunit:htmlunit:2.18"
+    testCompile "org.seleniumhq.selenium:htmlunit-driver:2.35.1"
+    testRuntime 'net.sourceforge.htmlunit:htmlunit:2.35.0'
     testCompile "org.seleniumhq.selenium:selenium-remote-driver:3.141.59"
     testCompile "org.seleniumhq.selenium:selenium-api:3.141.59"
     testCompile "org.seleniumhq.selenium:selenium-support:3.141.59"
