--- a/gradle.properties
+++ b/gradle.properties
@@ -4,6 +4,6 @@ authors=Nirav Assar
 copyright=Copies of this document may be made for your own use and for distribution to others, provided that you do not charge any fee for such copies and further provided that each copy contains this Copyright Notice, whether distributed in print or electronically. All guides are released with an ASLv2 license for the code, and Creative Commons license for the writing.
 githubSlug=grails-guides/grails-mock-basics
 githubBranch=master
-tags=unit-test, mock, spock
+tags=unit-test,mock,spock,grails3
 category=Grails Testing
 publicationDate=24 Apr 2017
