--- a/complete/build.gradle
+++ b/complete/build.gradle
@@ -8,8 +8,10 @@ buildscript {
         classpath "gradle.plugin.com.github.erdi.webdriver-binaries:webdriver-binaries-gradle-plugin:2.1"
 
         classpath "com.bertramlabs.plugins:asset-pipeline-gradle:3.0.11"
+        //tag::gradlepluginhibernate[]
+        classpath "org.grails.plugins:hibernate5:7.0.0"  // <1>
+        //end::gradlepluginhibernate[]
 
-        classpath "org.grails.plugins:hibernate5:7.0.0"
     }
 }
 
@@ -55,8 +57,10 @@ dependencies {
     compile "org.grails.plugins:async"
     compile "org.grails.plugins:scaffolding"
     compile "org.grails.plugins:events"
-    compile "org.grails.plugins:hibernate5"
+    //tag::dependencieshibernate[]
+    compile "org.grails.plugins:hibernate5" // <1>
     compile "org.hibernate:hibernate-core:5.4.0.Final"  // <1>
+    //end::dependencieshibernate[]
     compile "org.grails.plugins:gsp"
     console "org.grails:grails-console"
     profile "org.grails.profiles:web"
